--- a/app/components/version-list/row.hbs
+++ b/app/components/version-list/row.hbs
@@ -62,7 +62,7 @@
 
       <span local-class="license">
         {{svg-jar "license"}}
-        {{@version.license}}
+        <LicenseExpression @license={{@version.license}} />
       </span>
 
       {{#if @version.featureList}}
