CrateSidebar: Use `LicenseExpression` component to display license information

--- a/app/components/crate-sidebar.hbs
+++ b/app/components/crate-sidebar.hbs
@@ -82,7 +82,9 @@
     {{#if @version.license}}
       <div>
         <h3>License</h3>
-        <p data-test-license>{{ @version.license }}</p>
+        <p data-test-license>
+          <LicenseExpression @license={{@version.license }} />
+        </p>
       </div>
     {{/if}}
 
