--- a/app/components/front-page-list/item.module.css
+++ b/app/components/front-page-list/item.module.css
@@ -1,16 +1,33 @@
 .link {
+    --shadow: 0 2px 3px hsla(51, 50%, 44%, .35);
+
     display: flex;
     align-items: center;
     width: 100%;
-    min-height: 60px;
+    height: 60px;
     margin: 8px 0;
-    padding: 0 10px;
-    background-color: var(--main-bg-dark);
+    padding: 0 15px;
+    background-color: white;
     color: #525252;
     text-decoration: none;
+    border-radius: 7px;
+    box-shadow: var(--shadow);
+    transition: background-color 300ms;
 
-    &:hover {
-        background-color: #e4e1cc;
+    &:focus-visible {
+        outline: none;
+        box-shadow: 0 0 0 3px var(--yellow500), var(--shadow);
+    }
+
+    &:hover, &:focus-visible {
+        color: #525252;
+        background-color: hsl(58deg 72% 97%);
+        transition: background-color 0ms;
+    }
+
+    &:active {
+        transform: translateY(2px);
+        --shadow: inset 0 0 0 1px hsla(51, 50%, 44%, .15);
     }
 }
 
