Fix #3294 - handle invalid semver strings in `crates/:crate_id/versions`
* Add a tooltip message and a new icon to components/version-list/row
* Handle null returned from `semverParse` in models/version
* Add `loose` option to `semverParse` (https://github.com/npm/node-semver#functions)

--- a/app/components/version-list/row.hbs
+++ b/app/components/version-list/row.hbs
@@ -12,6 +12,8 @@
     <div local-class="release-track">
       {{#if @version.yanked}}
         {{svg-jar "trash"}}
+      {{else if @version.invalidSemver}}
+        ?
       {{else if @version.isFirst}}
         {{svg-jar "star"}}
       {{else}}
