Break words in version row tooltips

--- a/app/components/version-list/row.module.css
+++ b/app/components/version-list/row.module.css
@@ -46,6 +46,10 @@
         z-index: 1;
         cursor: help;
     }
+
+    :global(.ember-tooltip) {
+        word-break: break-all;
+    }
 }
 
 .version {
