--- a/app/components/version-list/row.hbs
+++ b/app/components/version-list/row.hbs
@@ -9,7 +9,7 @@
   ...attributes
 >
   <div local-class="version">
-    <div local-class="release-track">
+    <div local-class="release-track" data-test-release-track>
       {{#if @version.yanked}}
         {{svg-jar "trash"}}
       {{else if @version.invalidSemver}}
@@ -20,7 +20,7 @@
         {{@version.releaseTrack}}
       {{/if}}
 
-      <EmberTooltip @text={{this.releaseTrackTitle}} @side="right" />
+      <EmberTooltip @text={{this.releaseTrackTitle}} @side="right" data-test-release-track-title/>
     </div>
 
     <LinkTo
@@ -29,6 +29,7 @@
       local-class="num-link"
       {{on "focusin" (fn this.setFocused true)}}
       {{on "focusout" (fn this.setFocused false)}}
+      data-test-release-track-link
     >
       {{@version.num}}
     </LinkTo>
