--- a/app/styles/dashboard.module.css
+++ b/app/styles/dashboard.module.css
@@ -82,7 +82,7 @@
 
 .feed {
     background: white;
-    padding: 0 20px;
+    padding: 0 20px 20px;
 }
 
 .feed-list {
@@ -128,7 +128,6 @@
     padding: 10px;
     outline: 0;
     border: 0;
-    margin-bottom: 20px;
     background-color: #dbd9cf;
     color: white;
 
