--- a/app/components/crate-header.hbs
+++ b/app/components/crate-header.hbs
@@ -13,3 +13,24 @@
     {{/if}}
   </div>
 </PageHeader>
+
+<NavTabs aria-label="{{@crate.name}} crate subpages" local-class="nav" as |nav|>
+  <nav.Tab
+    @link={{if
+      (eq this.router.currentRouteName "crate.version")
+      (link "crate.version" @crate @version.num)
+      (link "crate.index" @crate)
+    }}
+    data-test-readme-tab
+  >
+    Readme
+  </nav.Tab>
+
+  <nav.Tab @link={{link "crate.versions" @crate}} data-test-versions-tab>
+    {{@crate.versions.length}} Versions
+  </nav.Tab>
+
+  <nav.Tab @link={{link "crate.reverse-dependencies" @crate}} data-test-rev-deps-tab>
+    Dependents
+  </nav.Tab>
+</NavTabs>
