crate.owners: Display `CrateHeader` at the top
... instead of the generic `PageHeader`

--- a/app/templates/crate/owners.hbs
+++ b/app/templates/crate/owners.hbs
@@ -1,10 +1,6 @@
 {{page-title 'Manage Crate Owners'}}
 
-<PageHeader
-  @title="Manage Crate Owners"
-  @suffix={{this.crate.name}}
-  @icon="gear"
-/>
+<CrateHeader @crate={{this.crate}} />
 
 <div local-class="me-email">
   <h2>Add Owner</h2>
