CrateSidebar: Extract `showHomepage` property

--- a/app/components/crate-sidebar.hbs
+++ b/app/components/crate-sidebar.hbs
@@ -39,7 +39,7 @@
     </div>
 
     <div>
-      {{#if (and @crate.homepage (not-eq @crate.repository @crate.homepage))}}
+      {{#if this.showHomepage}}
         <CrateSidebar::Link
           @title="Homepage"
           @url={{@crate.homepage}}
