--- a/app/components/crate-sidebar.hbs
+++ b/app/components/crate-sidebar.hbs
@@ -43,6 +43,7 @@
         <CrateSidebar::Link
           @title="Homepage"
           @url={{@crate.homepage}}
+          data-test-homepage-link
         />
       {{/if}}
 
@@ -58,6 +59,7 @@
         <CrateSidebar::Link
           @title="Repository"
           @url={{@crate.repository}}
+          data-test-repository-link
         />
       {{/if}}
     </div>
