crate.version: Show "missing readme" message instead of duplicate crate description
The description is already shown in the header now

--- a/app/styles/crate/version.module.css
+++ b/app/styles/crate/version.module.css
@@ -31,7 +31,8 @@
     margin-bottom: 20px;
 }
 
-.readme-spinner {
+.readme-spinner,
+.no-readme {
     padding: 40px 15px;
     text-align: center;
     font-size: 20px;
