--- a/app/templates/crate/version.hbs
+++ b/app/templates/crate/version.hbs
@@ -23,12 +23,9 @@
           <RenderedHtml @html={{this.readme}} local-class="readme" />
         </article>
       {{else}}
-        {{#if this.crate.description}}
-          <div local-class='about'>
-            <h3>About This Package</h3>
-            <p>{{ this.crate.description }}</p>
-          </div>
-        {{/if}}
+        <div local-class="no-readme">
+          {{this.crate.name}} v{{this.currentVersion.num}} appears to have no <code>README.md</code> file
+        </div>
       {{/if}}
     {{/if}}
   </div>
