--- a/app/components/nav-tabs/tab.module.css
+++ b/app/components/nav-tabs/tab.module.css
@@ -9,7 +9,7 @@
     border-top-right-radius: var(--nav-tabs-radius);
     border-bottom: var(--nav-tabs-border-width) solid transparent;
     margin-bottom: calc(0px - var(--nav-tabs-border-width));
-    transition: all 300ms;
+    transition: color 300ms, border-bottom-color 300ms;
 
     &.active {
         color: var(--link-hover-color);
@@ -20,7 +20,16 @@
     &:hover {
         color: var(--link-hover-color);
         border-bottom-color: var(--link-hover-color);
-        transition: all 0s;
+        transition: color 0s, border-bottom-color 0s;
+    }
+
+    &:focus-visible {
+        outline: none;
+        margin: -3px;
+        border: 3px solid var(--yellow500);
+        position: relative;
+        transition: border-bottom-color 0s;
+        z-index: 1;
     }
 
     @media only screen and (max-width: 550px) {
