--- a/app/components/crate-header.module.css
+++ b/app/components/crate-header.module.css
@@ -35,6 +35,26 @@
     line-height: 1.35;
 }
 
+.keywords {
+    list-style: none;
+    margin: 10px 0 0;
+    padding: 0;
+
+    > li {
+        display: inline;
+
+        &:not(:last-child) {
+            margin-right: 15px;
+        }
+    }
+}
+
+.hash {
+    margin-right: 1px;
+    font-family: monospace;
+    font-size: 90%;
+}
+
 .nav {
     margin-bottom: 20px;
 }
