--- a/app/templates/crates.hbs
+++ b/app/templates/crates.hbs
@@ -37,10 +37,6 @@
   </div>
 </div>
 
-<div local-class="list">
-  {{#each this.model as |crate index|}}
-    <CrateRow @crate={{crate}} local-class="row" data-test-crate-row={{index}} />
-  {{/each}}
-</div>
+<CrateList @crates={{this.model}} local-class="list" />
 
 <Pagination @pagination={{this.pagination}} />
