CrateList: Use ordered list elements
The extra div wrapper is needed for specificity issues with `margin`

--- a/app/components/crate-list.hbs
+++ b/app/components/crate-list.hbs
@@ -1,14 +1,19 @@
-<div local-class="list" ...attributes>
-  {{#if @exactMatch}}
-    <div local-class="exact-match">
-      <LinkTo @route="crate" @model={{@exactMatch}}>
-        <h1>Exact Match</h1>
-      </LinkTo>
-      <CrateRow @crate={{@exactMatch}} local-class="row" data-test-crate-row="exact-match" />
-    </div>
-  {{/if}}
+<div ...attributes>
+  {{!-- The extra div wrapper is needed for specificity issues with `margin` --}}
+  <ol local-class="list">
+    {{#if @exactMatch}}
+      <li local-class="row exact-match">
+        <LinkTo @route="crate" @model={{@exactMatch}}>
+          <h1>Exact Match</h1>
+        </LinkTo>
+        <CrateRow @crate={{@exactMatch}} data-test-crate-row="exact-match" />
+      </li>
+    {{/if}}
 
-  {{#each @crates as |crate index|}}
-    <CrateRow @crate={{crate}} local-class="row" data-test-crate-row={{index}} />
-  {{/each}}
+    {{#each @crates as |crate index|}}
+      <li local-class="row">
+        <CrateRow @crate={{crate}} data-test-crate-row={{index}} />
+      </li>
+    {{/each}}
+  </ol>
 </div>
