--- a/app/components/crate-row.module.css
+++ b/app/components/crate-row.module.css
@@ -1,6 +1,13 @@
 .crate-row {
+    --shadow: 0 1px 3px hsla(51, 90%, 42%, .35);
+
     display: flex;
     flex-wrap: wrap;
+    padding: 15px 25px;
+    background-color: white;
+    border-radius: 5px;
+    box-shadow: var(--shadow);
+    transition: all 300ms;
 }
 
 .description-box {
