crate.version: Improve README styling

--- a/app/styles/crate/version.module.css
+++ b/app/styles/crate/version.module.css
@@ -1,6 +1,7 @@
 .crate-info {
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
 
     @media only screen and (min-width: 890px) {
         flex-direction: row;
@@ -8,10 +9,18 @@
 }
 
 .docs {
+    --shadow: 0 2px 3px hsla(51, 50%, 44%, .35);
+
+    margin-bottom: 25px;
+    padding: 25px;
+    background-color: white;
+    border-radius: 5px;
+    box-shadow: var(--shadow);
+
     @media only screen and (min-width: 890px) {
         flex: 7;
-        padding-right: 20px;
         max-width: 640px;
+        margin-bottom: 0;
     }
 }
 
@@ -22,10 +31,6 @@
     > h3 {
         margin-top: 0;
     }
-}
-
-.readme {
-    margin-bottom: 20px;
 }
 
 .readme-spinner,
@@ -48,15 +53,15 @@
 .sidebar {
     @media only screen and (min-width: 890px) {
         flex: 3;
-        border-left: 2px solid var(--gray-border);
-        padding-left: 20px;
+        margin-top: 20px;
+        margin-left: 20px;
     }
 }
 
 .crate-downloads {
     display: flex;
     flex-wrap: wrap;
-    margin-top: 20px;
+    margin-top: 25px;
     border-top: 5px solid var(--gray-border);
 
     h3 { width: 100%; }
