PageHeader: Replace deprecated `hasBlock` with `has-block` helper

--- a/app/components/page-header.hbs
+++ b/app/components/page-header.hbs
@@ -1,5 +1,5 @@
 <div local-class="header" data-test-page-header ...attributes>
-  {{#if hasBlock}}
+  {{#if (has-block)}}
     {{yield}}
   {{else}}
     <h1 local-class="heading">
