Convert unknown arguments to attributes for built-in components

--- a/app/components/settings/api-tokens.hbs
+++ b/app/components/settings/api-tokens.hbs
@@ -30,7 +30,7 @@
         <Input
           @type="text"
           placeholder="New token name"
-          @disabled={{this.newToken.isSaving}}
+          disabled={{this.newToken.isSaving}}
           @value={{this.newToken.name}}
           data-test-focused-input
           {{auto-focus}}
