--- a/app/components/pagination.hbs
+++ b/app/components/pagination.hbs
@@ -1,17 +1,17 @@
 <nav local-class='pagination' aria-label="Pagination navigation">
-  <LinkTo @query={{hash page=@pagination.prevPage}} local-class="prev" @rel="prev" @title="previous page" data-test-pagination-prev>
+  <LinkTo @query={{hash page=@pagination.prevPage}} local-class="prev" rel="prev" title="previous page" data-test-pagination-prev>
     {{svg-jar "left-pag"}}
   </LinkTo>
   <ol>
     {{#each @pagination.pages as |page|}}
       <li>
-        <LinkTo @query={{hash page=page}} @title={{concat "Go to page " page}}>
+        <LinkTo @query={{hash page=page}} title={{concat "Go to page " page}}>
           {{ page }}
         </LinkTo>
       </li>
     {{/each}}
   </ol>
-  <LinkTo @query={{hash page=@pagination.nextPage}} local-class="next" @rel="next" @title="next page" data-test-pagination-next>
+  <LinkTo @query={{hash page=@pagination.nextPage}} local-class="next" rel="next" title="next page" data-test-pagination-next>
     {{svg-jar "right-pag"}}
   </LinkTo>
 </nav>
