--- a/app/components/crate-sidebar.module.css
+++ b/app/components/crate-sidebar.module.css
@@ -66,7 +66,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 7px 12px;
-    font-family: monospace;
+    font-family: var(--font-monospace);
     font-size: 14px;
     line-height: 1.5em;
     color: var(--main-color);
