--- a/app/styles/application.module.css
+++ b/app/styles/application.module.css
@@ -10,7 +10,7 @@
     --header-bg-color: var(--green800);
     --footer-bg-color: var(--green800);
 
-    --font-family: "Fira Sans", sans-serif;
+    --font-sans: "Fira Sans", sans-serif;
     --font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 
     --main-color: #383838;
@@ -39,7 +39,7 @@ html, body {
 
 body {
     background-color: var(--header-bg-color);
-    font-family: var(--font-family);
+    font-family: var(--font-sans);
     font-size: 16px;
     display: flex;
     flex-direction: column;
