CrateSidebar::Link: Use `word-break: break-word` for links
This ensures that long URLs will get sufficient line breaks and not extend horizontally beyond the size of the container element

--- a/app/components/crate-sidebar/link.hbs
+++ b/app/components/crate-sidebar/link.hbs
@@ -9,7 +9,7 @@
       {{svg-jar "link" local-class="icon" data-test-icon="link"}}
     {{/if}}
 
-    <a href={{@url}} data-test-link>
+    <a href={{@url}} local-class="link" data-test-link>
       {{this.text}}
     </a>
   </div>
