CrateSidebar::Link: Use `text-overflow: ellipsis` for links

--- a/app/components/crate-sidebar/link.module.css
+++ b/app/components/crate-sidebar/link.module.css
@@ -9,3 +9,9 @@
     width: auto;
     margin-right: 7px;
 }
+
+.link {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
