FrontPageList::Item::Placeholder: Add background animation

--- a/app/components/front-page-list/item/placeholder.module.css
+++ b/app/components/front-page-list/item/placeholder.module.css
@@ -19,19 +19,48 @@
     width: 0;
 }
 
+
+.placeholder {
+    --placeholder-bg: hsla(59, 19%, 50%, 1.0);
+    --placeholder-bg2: hsla(59, 19%, 50%, 0.7);
+
+    position: relative;
+    display: block;
+    overflow: hidden;
+    background: linear-gradient(to right, var(--placeholder-bg) 8%, var(--placeholder-bg2) 18%, var(--placeholder-bg) 33%);
+    background-size: 800px 104px;
+    animation-name: backgroundAnimation;
+    animation-duration: 1.5s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-fill-mode: forwards;
+}
+
+@keyframes backgroundAnimation {
+    0% {
+        background-position: -500px;
+    }
+
+    100% {
+        background-position: 500px;
+    }
+}
+
 .title {
+    composes: placeholder;
     height: 16px;
     width: 150px;
     border-radius: 8px;
-    background: hsla(59deg, 19%, 50%, 0.25);
+    opacity: 0.25;
 }
 
 .subtitle {
+    composes: placeholder;
     height: 13px;
     width: 90px;
     margin-top: 4px;
     border-radius: 6.5px;
-    background: hsla(59deg, 19%, 50%, 0.2);
+    opacity: 0.2;
 }
 
 .right {
