reverse-dependencies: Use `<ul>` for dependency list

--- a/app/styles/crate/reverse-dependencies.module.css
+++ b/app/styles/crate/reverse-dependencies.module.css
@@ -7,9 +7,10 @@
 }
 
 .list {
+    list-style: none;
     background-color: white;
     padding: 0 20px;
-    margin-bottom: 20px;
+    margin: 0 0 20px;
 }
 
 .row {
