RevDepRow: Merge `stats` CSS class into `downloads`

--- a/app/components/rev-dep-row.hbs
+++ b/app/components/rev-dep-row.hbs
@@ -5,7 +5,7 @@
     </LinkTo>
     requires {{@dependency.req}}
   </div>
-  <div local-class="stats downloads">
+  <div local-class="downloads">
     {{svg-jar "download-arrow" local-class="download-icon"}}
     <span local-class="rev-dep-downloads">{{ format-num @dependency.downloads }}</span>
   </div>
