--- a/app/templates/catch-all.hbs
+++ b/app/templates/catch-all.hbs
@@ -11,6 +11,7 @@
     @type="text"
     local-class="search-field"
     placeholder="Search"
+    aria-label="Search"
     @value={{this.header.searchValue}}
     required={{true}}
     data-test-404-search-input
