--- a/app/components/settings/api-tokens.hbs
+++ b/app/components/settings/api-tokens.hbs
@@ -30,6 +30,7 @@
         <Input
           @type="text"
           placeholder="New token name"
+          aria-label="New token name"
           disabled={{this.newToken.isSaving}}
           @value={{this.newToken.name}}
           data-test-focused-input
