RenderedHtml: Use `--font-monospace` for code sample

--- a/app/components/rendered-html.module.css
+++ b/app/components/rendered-html.module.css
@@ -25,6 +25,10 @@
         }
     }
 
+    code {
+        font-family: var(--font-monospace);
+    }
+
     table {
         border-collapse: collapse;
         display: block;
