Link to the dump changelog in the data access page

--- a/app/templates/data-access.hbs
+++ b/app/templates/data-access.hbs
@@ -20,6 +20,7 @@
     The latest dump is available at the address
     <a href='https://static.crates.io/db-dump.tar.gz'>https://static.crates.io/db-dump.tar.gz</a>.
     Information on using the dump is contained in the tarball.
+    You can find the changelog for the database dumps in GitHub Issue <a href='https://github.com/rust-lang/crates.io/issues/3617'>#3617</a>.
   </li>
   <li>
     <b>Crawl the crates.io API.</b> This should be used as a last resort, and
