Add note to "Account Settings" page about how to change Name/Github Account

--- a/app/templates/me/index.hbs
+++ b/app/templates/me/index.hbs
@@ -15,6 +15,12 @@
       <dd>{{ this.model.user.login }}</dd>
     </dl>
   </div>
+
+  <p>
+      To update your name and GitHub account, change them in your GitHub profile, then sign out and login again to
+      crates.io.
+      You cannot change these settings directly on crates.io, but we accept whatever values come from GitHub.
+  </p>
 </div>
 
 <div local-class="me-email">
