Add a link to report an Issue
Signed-off-by: hi-rustin <rustin.liu@gmail.com>

--- a/app/components/footer.hbs
+++ b/app/components/footer.hbs
@@ -8,6 +8,8 @@
     <span local-class="sep">|</span>
     <a href='https://www.rust-lang.org/policies/security'>Report a security issue</a>
     <span local-class="sep">|</span>
+    <a href='https://github.com/rust-lang/crates.io/issues/new/choose'>Report an issue</a>
+    <span local-class="sep">|</span>
     <a href='https://github.com/rust-lang/crates.io'>Fork on GitHub</a>
     <span local-class="sep">|</span>
     <a href='https://foundation.rust-lang.org/policies/privacy-policy/'>Privacy policy</a>
