Adjusting the order
Signed-off-by: hi-rustin <rustin.liu@gmail.com>

--- a/app/components/footer.hbs
+++ b/app/components/footer.hbs
@@ -6,9 +6,9 @@
     <span local-class="sep">|</span>
     <a href='mailto:help@crates.io'>Send us an email</a>
     <span local-class="sep">|</span>
-    <a href='https://www.rust-lang.org/policies/security'>Report a security issue</a>
+    <a href='https://www.rust-lang.org/policies/security'>Report a general issue</a>
     <span local-class="sep">|</span>
-    <a href='https://github.com/rust-lang/crates.io/issues/new/choose'>Report an issue</a>
+    <a href='https://github.com/rust-lang/crates.io/issues/new/choose'>Report a security issue</a>
     <span local-class="sep">|</span>
     <a href='https://github.com/rust-lang/crates.io'>Fork on GitHub</a>
     <span local-class="sep">|</span>
